--- a/app/src/main/res/layout/fragment_player_2.xml
+++ b/app/src/main/res/layout/fragment_player_2.xml
@@ -24,7 +24,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:rotation="180"
-        android:text="Button"
+        android:text="Hola"
         app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
