--- a/app/src/main/res/layout/fragment_player_2.xml
+++ b/app/src/main/res/layout/fragment_player_2.xml
@@ -9,23 +9,9 @@
         android:id="@+id/textView"
         android:layout_width="0dp"
         android:layout_height="581dp"
-        android:layout_marginTop="64dp"
+        android:gravity="center_vertical|center_horizontal"
         android:rotation="180"
         android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:rotation="180"
-        android:text="Hola"
-        app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
